created the world clock structure and added css

--- a/src/style.css
+++ b/src/style.css
@@ -1,14 +1,54 @@
 body {
+  background-color: aliceblue;
+  margin-top: 50px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+select {
+  width: 100%;
+  padding: 10px;
+  border-radius: 5px;
+}
+.container {
   display: block;
   margin: 0 auto;
   width: 600px;
+  background-color: white;
+  padding: 20px 30px;
+  border-radius: 20px;
+  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.08)
 }
 h1 {
   text-align: center;
 }
+h2 {
+  margin: 0;
+}
+.country {
+  display: flex;
+  justify-content: space-between;
+  margin: 20px 0;
+  border-bottom: 1px dashed gray;
+  padding-bottom: 20px;
+  align-items: center; 
+}
+.time {
+  font-size: 38px;
+  font-weight: bold;
+}
+.time small {
+  font-size: 20px;
+  vertical-align: middle; 
+  
+}
+.date {
+  margin: 5px 0;
+  opacity: 0.7;
+  font-size: 14px;
+}
 footer {
   text-align: center;
-  font-size: 15px;
+  font-size: 12px;
+  margin-top: 10px;
 }
 a {
   color: black;
